--- a/image-gallery-manager.html
+++ b/image-gallery-manager.html
@@ -215,17 +215,19 @@
                                         Width (pixels)
                                     </label>
                                     <input type="number" x-model.number="imageEdit.width" min="100" max="2000" 
+                                           @input="updatePreview()"
                                            class="w-full border border-gray-300 rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-purple-500">
                                 </div>
                                 <div>
                                     <label class="block text-sm font-semibold text-gray-700 mb-2">
-                                        <input type="checkbox" x-model="imageEdit.maintainAspect" class="mr-2">
+                                        <input type="checkbox" x-model="imageEdit.maintainAspect" class="mr-2" @input="updatePreview()">
                                         Maintain Aspect Ratio
                                     </label>
                                 </div>
                                 <div>
                                     <label class="block text-sm font-semibold text-gray-700 mb-2">Height (pixels)</label>
                                     <input type="number" x-model.number="imageEdit.height" min="100" max="2000" 
+                                           @input="updatePreview()"
                                            :disabled="imageEdit.maintainAspect"
                                            class="w-full border border-gray-300 rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-purple-500 disabled:bg-gray-100">
                                 </div>
@@ -244,6 +246,7 @@
                                         <span class="float-right text-gray-500" x-text="`${imageEdit.brightness}%`"></span>
                                     </label>
                                     <input type="range" x-model.number="imageEdit.brightness" min="0" max="200" step="5"
+                                           @input="updatePreview()"
                                            class="slider-input w-full">
                                 </div>
                                 <div>
@@ -252,6 +255,7 @@
                                         <span class="float-right text-gray-500" x-text="`${imageEdit.contrast}%`"></span>
                                     </label>
                                     <input type="range" x-model.number="imageEdit.contrast" min="0" max="200" step="5"
+                                           @input="updatePreview()"
                                            class="slider-input w-full">
                                 </div>
                                 <div>
@@ -260,6 +264,7 @@
                                         <span class="float-right text-gray-500" x-text="`${imageEdit.saturation}%`"></span>
                                     </label>
                                     <input type="range" x-model.number="imageEdit.saturation" min="0" max="200" step="5"
+                                           @input="updatePreview()"
                                            class="slider-input w-full">
                                 </div>
                                 <div>
@@ -268,6 +273,7 @@
                                         <span class="float-right text-gray-500" x-text="`${imageEdit.hue}°`"></span>
                                     </label>
                                     <input type="range" x-model.number="imageEdit.hue" min="0" max="360" step="5"
+                                           @input="updatePreview()"
                                            class="slider-input w-full">
                                 </div>
                                 <button @click="resetAdjustments()" class="w-full bg-gray-300 text-gray-700 py-2 rounded-lg hover:bg-gray-400 transition">
@@ -712,6 +718,19 @@
                     this.imageEdit.contrast = 100;
                     this.imageEdit.saturation = 100;
                     this.imageEdit.hue = 0;
+                },
+
+                async updatePreview() {
+                    // Update the preview image with current edit settings
+                    try {
+                        const canvas = await this.generateEditedImage();
+                        const previewImg = document.getElementById('editPreview');
+                        if (previewImg) {
+                            previewImg.src = canvas.toDataURL('image/jpeg', 0.9);
+                        }
+                    } catch (error) {
+                        console.error('Error updating preview:', error);
+                    }
                 },
 
                 deleteImage(image) {
