--- a/principal-dashboard.html
+++ b/principal-dashboard.html
@@ -310,6 +310,18 @@
                                 <p class="text-sm font-medium text-orange-800">Monitor Classes</p>
                             </div>
                         </button>
+
+                        <!-- Home Page Manager Button -->
+                        <button @click="openHomePageManager()" class="p-4 bg-gradient-to-br from-pink-50 to-pink-100 hover:from-pink-100 hover:to-pink-200 rounded-xl border-2 border-pink-200 hover:border-pink-300 transition-all duration-200 group">
+                            <div class="text-center">
+                                <div class="w-12 h-12 bg-gradient-to-br from-pink-500 to-pink-600 rounded-lg mx-auto mb-3 flex items-center justify-center group-hover:scale-110 transition-transform duration-200">
+                                    <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"/>
+                                    </svg>
+                                </div>
+                                <p class="text-sm font-medium text-pink-800">Home Manager</p>
+                            </div>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -467,6 +479,10 @@
                 
                 monitorClasses() {
                     alert('Opening real-time class monitoring system...');
+                },
+                
+                openHomePageManager() {
+                    window.location.href = 'home-page-manager.html';
                 }
             }
         }
