fix: correct redirect paths for legacy frontend system
- Updated login.html redirect to use /legacy/principal-dashboard.html and /legacy/dashboard.html
- Updated auth.js to redirect to /legacy/login.html and /legacy/unauthorized.html
- Ensures all authentication flows work correctly from /legacy/ directory
- Login now properly redirects to correct dashboards after authentication

--- a/kataria-school-frontend/public/legacy/login.html
+++ b/kataria-school-frontend/public/legacy/login.html
@@ -298,9 +298,9 @@
                             setTimeout(() => {
                                 // Redirect based on role
                                 if (credential.role === 'principal') {
-                                    window.location.href = '/principal-dashboard.html';
+                                    window.location.href = '/legacy/principal-dashboard.html';
                                 } else {
-                                    window.location.href = '/dashboard.html';
+                                    window.location.href = '/legacy/dashboard.html';
                                 }
                             }, 1500);
                         } else {
