--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -142,7 +142,7 @@
                             </svg>
                             Profile
                         </a>
-                        <button @click="window.location.href = '/login.html'" class="px-6 py-2 bg-gradient-to-r from-red-500 to-red-600 hover:from-red-600 hover:to-red-700 text-white font-semibold rounded-lg shadow-lg transform transition-all duration-200 hover:scale-[1.02] focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2">
+                        <button @click="logout()" class="px-6 py-2 bg-gradient-to-r from-red-500 to-red-600 hover:from-red-600 hover:to-red-700 text-white font-semibold rounded-lg shadow-lg transform transition-all duration-200 hover:scale-[1.02] focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2">
                             <svg class="w-5 h-5 inline mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"/>
                             </svg>
@@ -395,8 +395,13 @@
                 },
                 
                 async logout() {
-                    // Mock logout, redirect to login page
-                    window.location.href = '/login.html';
+                    if (window.AuthService) {
+                        await window.AuthService.signOut();
+                    } else {
+                        // Fallback for when auth service isn't loaded
+                        console.warn('AuthService not found. Redirecting without proper logout.');
+                        window.location.href = '/login.html';
+                    }
                 },
                 
                 markAttendance() {
